Routes for home and results working.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="home-container">
+  <h1>Home is working!</h1>
+  <!-- NOTE: Header section -->
+  <header>
+    <a href="//gmail.com">Gmail</a>
+    <a href="//google.com/images">Images</a>
+  </header>
+
+
+
+  <!-- NOTE: Main section -->
+
+</div>
