Added style to home.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,4 @@
 <div class="home-container">
-  <h1>Home is working!</h1>
-
   <!-- NOTE: Header section -->
   <header>
     <a href="//gmail.com">Gmail</a>
@@ -11,7 +9,7 @@
 
   <!-- NOTE: Main section -->
   <main>
-    <img src="../../../assets/images/google-logo.png" alt="logo">
+    <img src="../../../assets/images/google-logo.png" alt="logo" class="google-logo">
     <div class="search-box">
       <form>
         <app-search></app-search>
