--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,9 @@
-<p>search works!</p>
+<div class="search-bar">
+  <input type="text"
+      name="search_term"
+      [(ngModel)]="currentTermValue"
+      value="{{ currentTermValue }}"
+  >
+  <mat-icon>search_outline</mat-icon>
+  <button type="submit" style="display: none;"></button>
+</div>
