--- a/src/app/components/result/result.component.scss
+++ b/src/app/components/result/result.component.scss
@@ -50,11 +50,91 @@
             div {
               display: flex;
               align-items: center;
+              padding: 5px;
+              margin: 0 10px 0 0 ;
+
+              &.active {
+                border-bottom: 3px solid #1A73E8;
+
+                a {
+                  color: #1A73E8;
+                }
+              }
+
+              a {
+                text-decoration: none;
+                font-size: 12px;
+                color: #5f6368;
+                margin-left: 0px;
+              }
+
+              mat-icon {
+                font-size: 18px;
+                height: 16px;
+                width: 16px;
+                color: #8D9499;
+              }
+
+
             }
 
           }
+
+          &-right {
+            display: flex;
+            justify-content: flex-end;
+            > * {
+              margin-right: 30px;
+              text-decoration: none;
+              color: #5F6368;
+            }
+          }
         }
 
+      }
+    }
+
+    &-right {
+      align-self: flex-start;
+      display: flex;
+      align-items: center;
+
+      button {
+        outline: none;
+        background-color: #1A73E8;
+        border: none;
+        border-radius: 4px;
+        padding: 10px 25px;
+        color: white;
+        font-weight: normal;
+        font-size: 14px;
+        margin-right: 40px;
+      }
+
+      mat-icon {
+        color: #727272;
+        margin-right: 10px;
+      }
+    }
+
+  }
+
+  .search-results {
+    max-width: 700px;
+    margin-left: 150px;
+
+    &-header {
+      margin: 10px 0 20px 0;
+      color: gray;
+    }
+
+    &-body {
+      a.search-results-body-link {
+        text-decoration: none;
+        color: #202124;
+        text-transform: lowercase;
+        margin-bottom: 5px;
+        display: block;
       }
     }
 
